# StudyGraphTheory

./: CMakeLists.txt  README.md
grafos/: CMakeLists.txt
grafos/src/: Grafo.cpp  Grafo.h  parametros.h
in_out_files/: saida.dot  saidaKRUSKAL.dot  saidaPRIM.dot  saidateste.dot  teste.txt  teste11.txt  teste12.txt  teste13.txt  teste14.txt  teste15.txt  teste16.txt  teste2-1.txt  teste2.txt  teste3.txt  teste4.txt  teste5.txt  teste6.txt  teste7.txt  teste8.txt  teste9.txt  testeeeeeee.dot
inputs/: teste.txt  teste1.txt
src/: DisjointSet.h  Grafo.cpp  Grafo.h  Timer.h  leitura.cpp  leitura.h  main.cpp  parametros.h
